<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_time"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/game_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/game_time"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/randomize_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_hint"
        android:textAlignment="textStart" />

</LinearLayout>
