<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/p1_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/player_1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/p2_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Button
            android:id="@+id/p2_btn"
            style="@style/button_p2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/player_2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/p1_btn"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <Button
            android:id="@+id/hit_btn"
            style="@style/red_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/hit"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/crit_btn"
            app:layout_constraintEnd_toStartOf="@+id/evade_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/crit_btn"
            style="@style/red_button"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/crit"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/red_eye_btn"
            app:layout_constraintEnd_toStartOf="@+id/green_eye_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hit_btn" />

        <Button
            android:id="@+id/red_eye_btn"
            style="@style/red_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/eye"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/red_blank_btn"
            app:layout_constraintEnd_toStartOf="@+id/green_blank_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crit_btn" />

        <Button
            android:id="@+id/red_blank_btn"
            style="@style/red_button"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/blank"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/log_text"
            app:layout_constraintEnd_toStartOf="@+id/backspace_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red_eye_btn" />

        <Button
            android:id="@+id/evade_btn"
            style="@style/green_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/evade"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/green_eye_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hit_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/green_eye_btn"
            style="@style/green_button"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/eye"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/green_blank_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.705"
            app:layout_constraintStart_toEndOf="@+id/crit_btn"
            app:layout_constraintTop_toBottomOf="@+id/evade_btn" />

        <Button
            android:id="@+id/green_blank_btn"
            style="@style/green_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/blank"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/backspace_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/red_eye_btn"
            app:layout_constraintTop_toBottomOf="@+id/green_eye_btn" />

        <Button
            android:id="@+id/backspace_btn"
            style="@style/util_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/clear"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/log_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/red_blank_btn"
            app:layout_constraintTop_toBottomOf="@+id/green_blank_btn" />

        <TextView
            android:id="@+id/log_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_horizontal"
            android:text="Blank + Blank + Blank + Blank + Blank"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <Button
            android:id="@+id/save_btn"
            style="@style/util_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>