<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.GameFragment"
    android:keepScreenOn="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <Button
            android:id="@+id/score_p2"
            style="@style/button_p2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:rotation="180"
            android:text="0"
            android:textSize="156sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintVertical_bias="0.509" />

        <Button
            android:id="@+id/score_objectives_p2"
            style="@style/button_p2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:rotation="180"
            android:text="@string/score_objectives"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/score_ships_p2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/score_ships_p2"
            style="@style/button_p2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:rotation="180"
            android:text="@string/score_combat"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/score_objectives_p2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <Button
            android:id="@+id/score_p1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="0"
            android:textSize="156sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/score_p2" />

        <Button
            android:id="@+id/score_ships_p1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/score_combat"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/score_objectives_p1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <Button
            android:id="@+id/score_objectives_p1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/score_objectives"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toEndOf="@+id/score_ships_p1"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <LinearLayout
            android:id="@+id/initiative_p2_layout"
            style="@style/button_p2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.tellmetheodds.VerticalTextView
                android:id="@+id/initiative_p2"
                style="@style/white_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:rotation="0"
                android:text="@string/initiative"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/initiative_p1_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/pink"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7">

            <com.example.tellmetheodds.VerticalTextView
                android:id="@+id/initiative_p1"
                style="@style/white_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:rotation="0"
                android:text="@string/initiative"
                android:textAlignment="gravity"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/planning_phase_timer_layout"
            style="@style/util_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline11">

            <com.example.tellmetheodds.VerticalChronometer
                android:id="@+id/planning_phase_timer"
                style="@style/white_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:countDown="true"
                android:gravity="center|center_horizontal"
                android:rotation="0"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/round_counter_layout"
            style="@style/util_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline10">

            <com.example.tellmetheodds.VerticalTextView
                android:id="@+id/round_counter"
                style="@style/white_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:rotation="0"
                android:text="@string/rounds"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/game_timer_layout"
            style="@style/util_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.tellmetheodds.VerticalChronometer
                android:id="@+id/game_timer"
                style="@style/white_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:rotation="0"
                android:textSize="48sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>